--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <td><a href="js_video/video_yearly_calendar.html" target="_blank"><img src="js_video/video_yearly_calendar.gif" alt="Yearly Calendar"></a></td>
             <td><table class="tableImageCss">
                     <tr class="thumbCss" valign="top" align="center">
-                        <td>Page<br><img src="js_thumb/yearly_calendar_1.gif" onclick="imgBig(this, 1)"></td>
+                        <td>Page<br><img src="js_thumb/yearly_calendar_1.gif" onclick="imgBig(this, 1)" border="1"></td>
                         <td>HTML<br><img src="js_thumb/yearly_calendar_2.gif" onclick="imgBig(this, 1)"></td>
                     <tr class="thumbCss" valign="top" align="center">
                         <td>JS<br>  <img src="js_thumb/yearly_calendar_3.gif" onclick="imgBig(this, 1)"></td>
@@ -60,7 +60,7 @@
             <td><img src="thumb_lwc_basic/alarm-clock.gif"       onclick="imgBig(this, 1)" alt="Alarm Clock"></td>
             <td><img src="thumb_lwc_basic/currency-exchange.gif" onclick="imgBig(this, 1)" alt="Currency Exchange"></td>
             <td><img src="thumb_lwc_basic/stop-watch.gif"        onclick="imgBig(this, 1)" alt="Stop Watch"></td>
-            <td><img src="thumb_lwc_basic/city-weather.gif"      onclick="imgBig(this, 1)" alt="City Weather"></td>            
+            <td><img src="thumb_lwc_basic/city-weather.gif"      onclick="imgBig(this, 1)" alt="City Weather" border="1"></td>            
         </tr>
 
         <tr class="trCss2" valign="top">
@@ -94,7 +94,7 @@
             <td colspan="4">
                 <table>
                     <tr class="thumbCss">
-                        <td><img src="thumb_flow_property/flow_property_1.gif" onclick="imgBig(this, 1)" alt="Record Triggered Flow"><br>Record<br>Triggered<br>Flow</td>
+                        <td><img src="thumb_flow_property/flow_property_1.gif" onclick="imgBig(this, 1)" alt="Record Triggered Flow" border="1"><br>Record<br>Triggered<br>Flow</td>
                         <td><img src="thumb_flow_property/flow_property_2.gif" onclick="imgBig(this, 1)" alt="Schema"><br>Schema</td>
                         <td><img src="thumb_flow_property/flow_property_3.gif" onclick="imgBig(this, 1)" alt="Property"><br>Property</td>
                         <td><img src="thumb_flow_property/flow_property_4.gif" onclick="imgBig(this, 1)" alt="Loan"><br>Loan</td>
@@ -157,13 +157,13 @@
             <td colspan="4">
                 <table>
                     <tr class="thumbCss">
-                        <td><img src="thumb_carhub/carhub_1.gif" onclick="imgBig(this, 1)" alt="Carhub Home Page"><br>Home Page</td>
-                        <td><img src="thumb_carhub/carhub_2.gif" onclick="imgBig(this, 1)" alt="Search Car"><br>Search Car</td>
-                        <td><img src="thumb_carhub/carhub_3.gif" onclick="imgBig(this, 1)" alt="Select Car"><br>Select Car</td>
-                        <td><img src="thumb_carhub/carhub_4.gif" onclick="imgBig(this, 1)" alt="Car Details"><br>Car Details</td>
-                        <td><img src="thumb_carhub/carhub_5.gif" onclick="imgBig(this, 1)" alt="Similar Cars"><br>Similar Cars</td>
-                        <td><img src="thumb_carhub/carhub_6.gif" onclick="imgBig(this, 1)" alt="New Car"><br>New Car</td>
-                        <td><img src="thumb_carhub/carhub_7.gif" onclick="imgBig(this, 1)" alt="VS Code"><br>VS Code</td>
+                        <td><img src="thumb_carhub/carhub_1.gif" onclick="imgBig(this, 2)" alt="Carhub Home Page"><br>Home Page</td>
+                        <td><img src="thumb_carhub/carhub_2.gif" onclick="imgBig(this, 2)" alt="Search Car"><br>Search Car</td>
+                        <td><img src="thumb_carhub/carhub_3.gif" onclick="imgBig(this, 2)" alt="Select Car"><br>Select Car</td>
+                        <td><img src="thumb_carhub/carhub_4.gif" onclick="imgBig(this, 2)" alt="Car Details"><br>Car Details</td>
+                        <td><img src="thumb_carhub/carhub_5.gif" onclick="imgBig(this, 2)" alt="Similar Cars"><br>Similar Cars</td>
+                        <td><img src="thumb_carhub/carhub_6.gif" onclick="imgBig(this, 2)" alt="New Car"><br>New Car</td>
+                        <td><img src="thumb_carhub/carhub_7.gif" onclick="imgBig(this, 2)" alt="VS Code"><br>VS Code</td>
                     </tr>
                 </table>
             </td>
@@ -189,19 +189,20 @@
             <td colspan="4">
                 <table>
                     <tr class="thumbCss">
-                        <td><img src="thumb_aura_property/aura_property_1.gif" onclick="imgBig(this, 1)" alt="Property List"><br>Property List</td>
-                        <td><img src="thumb_aura_property/aura_property_2.gif" onclick="imgBig(this, 1)" alt="Owner"><br>Owner</td>
-                        <td><img src="thumb_aura_property/aura_property_3.gif" onclick="imgBig(this, 1)" alt="Inquiry"><br>Inquiry</td>
-                        <td><img src="thumb_aura_property/aura_property_4.gif" onclick="imgBig(this, 1)" alt="Property Details"><br>Property Details</td>
-                        <td><img src="thumb_aura_property/aura_property_5.gif" onclick="imgBig(this, 1)" alt="Video"><br>Video</td>
-                        <td><img src="thumb_aura_property/aura_property_6.gif" onclick="imgBig(this, 1)" alt="Schema"><br>Schema</td>
-                        <td><img src="thumb_aura_property/aura_property_7.gif" onclick="imgBig(this, 1)" alt="VS Code"><br>VS Code</td>
+                        <td><img src="thumb_aura_property/aura_property_1.gif" onclick="imgBig(this, 2)" alt="Property List"><br>Property List</td>
+                        <td><img src="thumb_aura_property/aura_property_2.gif" onclick="imgBig(this, 2)" alt="Owner"><br>Owner</td>
+                        <td><img src="thumb_aura_property/aura_property_3.gif" onclick="imgBig(this, 2)" alt="Inquiry"><br>Inquiry</td>
+                        <td><img src="thumb_aura_property/aura_property_4.gif" onclick="imgBig(this, 2)" alt="Property Details"><br>Property Details</td>
+                        <td><img src="thumb_aura_property/aura_property_5.gif" onclick="imgBig(this, 2)" alt="Video"><br>Video</td>
+                        <td><img src="thumb_aura_property/aura_property_6.gif" onclick="imgBig(this, 2)" alt="Schema"><br>Schema</td>
+                        <td><img src="thumb_aura_property/aura_property_7.gif" onclick="imgBig(this, 2)" alt="VS Code"><br>VS Code</td>
                     </tr>
                 </table>
             </td>
         </tr>
         <!--  ooooooooooooooooooooooooooooo Visualforce Project: Conference Management Start ooooooooooooooooo  -->
         <!--tr><td colspan="5" class="breakCss"></td></tr-->
+        <tr><td colspan="5"><img id="imgPopup5" src="" class="popupCss" onclick="imgHide(5)" /></td></tr> 
         <tr class="trCss1"><td colspan="5" align="center"><span class="headRedCss">Visualforce Project</span><br>
                 <span class="headBlueCss">Conference Management: &nbsp; Sessions &bull; Speakers &bull; Hotels</span><br>
                 <span class="subNoteCss">Operators can create new conference sessions, add speakers, and provide nearby <br>
@@ -223,13 +224,13 @@
             <td colspan="4">
                 <table>
                     <tr class="thumbCss">
-                        <td><img src="thumb_conference/conference_1.gif" onclick="imgBig(this, 2)" alt="Schema"><br>Schema</td>
-                        <td><img src="thumb_conference/conference_2.gif" onclick="imgBig(this, 2)" alt="Sessions"><br>Sessions</td>
-                        <td><img src="thumb_conference/conference_3.gif" onclick="imgBig(this, 2)" alt="Speakers"><br>Speakers</td>
-                        <td><img src="thumb_conference/conference_5.gif" onclick="imgBig(this, 2)" alt="Hotels"><br>Hotels</td>                        
-                        <td><img src="thumb_conference/conference_4.gif" onclick="imgBig(this, 2)" alt="Speaker Details"><br>Speaker Details</td>
-                        <td><img src="thumb_conference/conference_6.gif" onclick="imgBig(this, 2)" alt="Map"><br>Hotel Map</td>
-                        <td><img src="thumb_conference/conference_7.gif" onclick="imgBig(this, 2)" alt="VS Code"><br>VS Code</td>
+                        <td><img src="thumb_conference/conference_1.gif" onclick="imgBig(this, 3)" alt="Schema"><br>Schema</td>
+                        <td><img src="thumb_conference/conference_2.gif" onclick="imgBig(this, 3)" alt="Sessions"><br>Sessions</td>
+                        <td><img src="thumb_conference/conference_3.gif" onclick="imgBig(this, 3)" alt="Speakers"><br>Speakers</td>
+                        <td><img src="thumb_conference/conference_5.gif" onclick="imgBig(this, 3)" alt="Hotels"><br>Hotels</td>                        
+                        <td><img src="thumb_conference/conference_4.gif" onclick="imgBig(this, 3)" alt="Speaker Details"><br>Speaker Details</td>
+                        <td><img src="thumb_conference/conference_6.gif" onclick="imgBig(this, 3)" alt="Map"><br>Hotel Map</td>
+                        <td><img src="thumb_conference/conference_7.gif" onclick="imgBig(this, 3)" alt="VS Code"><br>VS Code</td>
                     </tr>
                 </table>
             </td>
@@ -249,40 +250,40 @@
             <td><table class="tableImageCss">
                     <tr valign="top">
                         <td><a href="py_videos/Py0104_video.html" target="_blank"><img src="py_videos/Py0104_video.gif" alt="Tkinter Video"></a></td>
-                        <td><img src="py_thumb/Py0104_1.gif" onclick="imgBig(this, 3)"></td>
-                        <td><img src="py_thumb/Py0104_2.gif" onclick="imgBig(this, 3)"></td>
+                        <td><img src="py_thumb/Py0104_1.gif" onclick="imgBig(this, 4)"></td>
+                        <td><img src="py_thumb/Py0104_2.gif" onclick="imgBig(this, 4)"></td>
                     </tr>
                 </table>        
             </td>
             <td><table class="tableImageCss">
                 <tr valign="top">
                     <td><a href="py_videos/Py0112_video.html" target="_blank"><img src="py_videos/Py0112_video.gif" alt="Flask Video"></a></td>
-                    <td><img src="py_thumb/Py0112_1.gif" onclick="imgBig(this, 4)"></td>
-                    <td><img src="py_thumb/Py0112_2.gif" onclick="imgBig(this, 4)"></td>
+                    <td><img src="py_thumb/Py0112_1.gif" onclick="imgBig(this, 5)"></td>
+                    <td><img src="py_thumb/Py0112_2.gif" onclick="imgBig(this, 5)"></td>
                 </tr>
                 </table>        
             </td>
             <td><table class="tableImageCss">
                 <tr valign="top">
-                    <td><img src="py_thumb/Py0132_1.gif" onclick="imgBig(this, 3)"></td>
+                    <td><img src="py_thumb/Py0132_1.gif" onclick="imgBig(this, 5)"></td>
                     <td><img src="py_thumb/Py0132_2.gif" onclick="imgBig(this, 2)"></td>
-                    <td><img src="py_thumb/Py0132_3.gif" onclick="imgBig(this, 2)"></td>
+                    <td><img src="py_thumb/Py0132_3.gif" onclick="imgBig(this, 3)"></td>
                 </tr>
                 </table>        
             </td>
             <td><table class="tableImageCss">
                 <tr valign="top">
-                    <td><img src="py_thumb/Py0131_1.gif" onclick="imgBig(this, 3)"></td>
-                    <td><img src="py_thumb/Py0131_2.gif" onclick="imgBig(this, 3)"></td>
+                    <td><img src="py_thumb/Py0131_1.gif" onclick="imgBig(this, 5)"></td>
+                    <td><img src="py_thumb/Py0131_2.gif" onclick="imgBig(this, 4)"></td>
                     <td><img src="py_thumb/Py0131_3.gif" onclick="imgBig(this, 3)"></td>
                 </tr>
                 </table>        
             </td>              
             <td><table class="tableImageCss">
                 <tr valign="top">
-                    <td><img src="py_thumb/Py0204_1.gif" onclick="imgBig(this, 2)"></td>
-                    <td><img src="py_thumb/Py0204_2.gif" onclick="imgBig(this, 2)"></td>
-                    <td><img src="py_thumb/Py0204_3.gif" onclick="imgBig(this, 2)"></td>
+                    <td><img src="py_thumb/Py0204_1.gif" onclick="imgBig(this, 3)"></td>
+                    <td><img src="py_thumb/Py0204_2.gif" onclick="imgBig(this, 3)"></td>
+                    <td><img src="py_thumb/Py0204_3.gif" onclick="imgBig(this, 3)"></td>
                 </tr>
                 </table>        
             </td>        
