--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <td><img src="thumb_lwc_basic/bmi-calculator.gif"    onclick="imgBig(this, 1)" alt="BMI Calculator"></td>
             <td><img src="thumb_lwc_basic/alarm-clock.gif"       onclick="imgBig(this, 1)" alt="Alarm Clock"></td>
             <td><img src="thumb_lwc_basic/currency-exchange.gif" onclick="imgBig(this, 1)" alt="Currency Exchange"></td>
-            <td><img src="thumb_lwc_basic/stop-watch.gif"        onclick="imgBig(this, 1)" alt="Stop Watch"></td>
-            <td><img src="thumb_lwc_basic/city-weather.gif"      onclick="imgBig(this, 1)" alt="City Weather" border="1"></td>            
+            <td><img src="thumb_lwc_basic/stop-watch.gif"        onclick="imgBig(this, 1)" alt="Stop Watch"><br><br>
+                <img src="thumb_lwc_basic/city-weather1.gif"     onclick="imgBig(this, 1)" alt="City Weather"></td>
+            <td><img src="thumb_lwc_basic/city-weather2.gif"     onclick="imgBig(this, 1)" alt="City Weather"></td>            
         </tr>
 
         <tr class="trCss2" valign="top">
